--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -51,41 +51,41 @@ Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Resources:
-  CmsStack:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      NotificationARNs:
-        - !Ref CloudFormationNotificationArn
-      Parameters:
-        AlbFullName: !Ref AlbFullName
-        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-        EcsClusterArn: !Ref EcsClusterArn
-        VpcId: !Ref VpcId
-        SecretsBase: !Ref SecretsBase
-        EcrImageTag: !Ref CmsEcrImageTag
-        SecretsVersion: !Ref CmsSecretsVersion
-        AlbListenerRulePriorityPrefix: !Ref CmsSharedAlbListenerRulePriorityPrefix
-        EcrRegion: !Ref EcrRegion
-        SecretsStackName: !Ref SecretsStackName
-        NotificationsStackName: !Ref NotificationsStackName
-        EnvironmentType: !Ref EnvironmentType
-        RootStackName: !Ref RootStackName
-        RootStackId: !Ref RootStackId
-        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
-        VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
-        VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
-        SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: CMS }
-      TemplateURL: !Sub ${TemplateUrlPrefix}/cms.yml
-      TimeoutInMinutes: 20
+  # CmsStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Properties:
+  #     NotificationARNs:
+  #       - !Ref CloudFormationNotificationArn
+  #     Parameters:
+  #       AlbFullName: !Ref AlbFullName
+  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+  #       EcsClusterArn: !Ref EcsClusterArn
+  #       VpcId: !Ref VpcId
+  #       SecretsBase: !Ref SecretsBase
+  #       EcrImageTag: !Ref CmsEcrImageTag
+  #       SecretsVersion: !Ref CmsSecretsVersion
+  #       AlbListenerRulePriorityPrefix: !Ref CmsSharedAlbListenerRulePriorityPrefix
+  #       EcrRegion: !Ref EcrRegion
+  #       SecretsStackName: !Ref SecretsStackName
+  #       NotificationsStackName: !Ref NotificationsStackName
+  #       EnvironmentType: !Ref EnvironmentType
+  #       RootStackName: !Ref RootStackName
+  #       RootStackId: !Ref RootStackId
+  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
+  #       VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
+  #       VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
+  #       SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
+  #     Tags:
+  #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+  #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+  #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+  #       - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+  #       - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+  #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+  #       - { Key: prx:dev:application, Value: CMS }
+  #     TemplateURL: !Sub ${TemplateUrlPrefix}/cms.yml
+  #     TimeoutInMinutes: 20
 
   IdStack:
     Type: AWS::CloudFormation::Stack
@@ -259,5 +259,5 @@ Outputs:
     Description: The user name of the IAM user whose key is used for signing
     Value: !GetAtt S3SigningStack.Outputs.SigningEndpointUrl
 
-  CmsElasticsearchDomainName:
-    Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
+  # CmsElasticsearchDomainName:
+  #   Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
