--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -987,6 +987,13 @@ Resources:
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
+        S3StaticSiteDeployServiceToken: !GetAtt CustomResourcesStack.Outputs.S3StaticSiteDeployServiceToken
+
+        # App-specific parameters
+
+        BacksawArchiveS3ObjectVersion: !Ref BacksawArchiveS3ObjectVersion
+
+        BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
 
         CmsEcrImageTag: !Ref CmsEcrImageTag
         CmsSecretsVersion: !Ref CmsSecretsVersion
