Fix template URLs

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -78,7 +78,7 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Backsaw }
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, backsaw.yml]]
+      TemplateURL: !Sub ${TemplateUrlPrefix}/backsaw.yml
       TimeoutInMinutes: 5
 
   BetaStack:
@@ -102,7 +102,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Beta }
-      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, beta.yml]]
+      TemplateURL: !Sub ${TemplateUrlPrefix}/beta.yml
       TimeoutInMinutes: 5
 
   CmsStack:
