--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -6,17 +6,12 @@ Description: Provisioned apps # TODO
 Parameters:
   TemplateUrlPrefix: { Type: String }
   CloudFormationNotificationArn: { Type: String }
-  AlbFullName: { Type: String }
-  AlbHttpsListenerArn: { Type: String }
   EcsClusterArn: { Type: String }
-  EcsClusterName: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
-  VpcCidrBlock: { Type: String }
-  VpcIpv6CidrBlocks: { Type: String }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
   SecretsStackName: { Type: String }
@@ -24,27 +19,13 @@ Parameters:
   VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
-  VpcPrivateSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
-  SharedMemcachedEndpointAddress: { Type: String }
-  SharedMemcachedEndpointPort: { Type: String }
-  AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   EchoServiceToken: { Type: String }
-  EcsLaunchEndpointsAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
-  KmsEndpointAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
   SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
-  S3SigningUserName: { Type: String }
-  S3SigningEndpointUrl: { Type: String }
-  S3SigningAccessKeyId: { Type: String }
 
   DovetailRouterEcrImageTag: { Type: String }
   DovetailRouterSecretsVersion: { Type: String }
   DovetailLegacyEcrImageTag: { Type: String }
   DovetailLegacySecretsVersion: { Type: String }
-
-Conditions:
-  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Resources:
   DovetailRouterStack:
@@ -90,3 +71,8 @@ Resources:
 Outputs:
   StackName:
     Value: !Ref AWS::StackName
+
+  DovetailVanityAlbDomain:
+    Value: !GetAtt DovetailRouterStack.Outputs.VanityAlbDomain
+  DovetailAlbName:
+    Value: !GetAtt DovetailRouterStack.Outputs.AlbName
