Add resource dependencies

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1190,7 +1190,7 @@ Resources:
     Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
-        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+        - !GetAtt Constants.CloudFormationNotificationArn
       Parameters:
         RootStackName: !GetAtt Constants.RootStackName
       Tags:
@@ -1209,7 +1209,7 @@ Resources:
   #   Condition: IsStaging # TODO
   #   Properties:
   #     NotificationARNs:
-  #       - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+  #       - !GetAtt Constants.CloudFormationNotificationArn
   #     Parameters:
   #       EnvironmentType: !Ref EnvironmentType
   #       RootStackName: !GetAtt Constants.RootStackName
