--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -396,6 +396,7 @@ Resources:
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    DependsOn: Alb
     Properties:
       HealthCheckIntervalSeconds: 15
       HealthCheckPath: /
@@ -449,6 +450,9 @@ Resources:
 
   EcsService:
     Type: AWS::ECS::Service
+    DependsOn:
+      - HttpListener
+      - HttpsListener
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
