Add new Tower stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -987,7 +987,6 @@ Resources:
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
-        S3StaticSiteDeployServiceToken: !GetAtt CustomResourcesStack.Outputs.S3StaticSiteDeployServiceToken
 
         # App-specific parameters
 
@@ -1006,6 +1005,8 @@ Resources:
         PlayEcrImageTag: !Ref PlayEcrImageTag
         PlaySecretsVersion: !Ref PlaySecretsVersion
         PlaySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Play, prefix]
+
+        RadiotopiaTowerLambdaCodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
 
         S3SigningLambdaCodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
 
