--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -24,7 +24,6 @@ Parameters:
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
   DeploymentPackageBucketName: { Type: String }
-  S3StaticSiteDeployServiceToken: { Type: String }
 
   CmsEcrImageTag: { Type: String }
   CmsSecretsVersion: { Type: String }
@@ -41,6 +40,8 @@ Parameters:
   PlayEcrImageTag: { Type: String }
   PlaySecretsVersion: { Type: String }
   PlaySharedAlbListenerRulePriorityPrefix: { Type: String }
+
+  RadiotopiaTowerLambdaCodeS3ObjectVersion: { Type: String }
 
   S3SigningLambdaCodeS3ObjectVersion: { Type: String }
 
@@ -188,6 +189,30 @@ Resources:
       TemplateURL: !Sub ${TemplateUrlPrefix}/play.yml
       TimeoutInMinutes: 20
 
+  RadiotopiaTowerStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+        CodeS3Bucket: !Ref DeploymentPackageBucketName
+        CodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Radiotopia }
+        - { Key: prx:dev:application, Value: Tower }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/radiotopia-tower.yml
+      TimeoutInMinutes: 5
+
   S3SigningStack:
     Type: AWS::CloudFormation::Stack
     Properties:
@@ -260,5 +285,5 @@ Outputs:
     Description: The user name of the IAM user whose key is used for signing
     Value: !GetAtt S3SigningStack.Outputs.SigningEndpointUrl
 
-  # CmsElasticsearchDomainName:
-  #   Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
+  CmsElasticsearchDomainName:
+    Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
