Move Metrics stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1052,10 +1052,6 @@ Resources:
   #       GroveSecretsVersion: !Ref GroveSecretsVersion
   #       GroveSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Grove, prefix]
 
-  #       MetricsEcrImageTag: !Ref MetricsEcrImageTag
-  #       MetricsSecretsVersion: !Ref MetricsSecretsVersion
-  #       MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
-
   #       NetworksEcrImageTag: !Ref NetworksEcrImageTag
   #       NetworksSecretsVersion: !Ref NetworksSecretsVersion
   #       NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
@@ -1145,6 +1141,10 @@ Resources:
         DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
         DovetailLegacyEcrImageTag: !Ref DovetailEcrImageTag
         DovetailLegacySecretsVersion: !Ref DovetailSecretsVersion
+
+        MetricsEcrImageTag: !Ref MetricsEcrImageTag
+        MetricsSecretsVersion: !Ref MetricsSecretsVersion
+        MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
