--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -6,6 +6,8 @@ Description: Provisioned apps # TODO
 Parameters:
   TemplateUrlPrefix: { Type: String }
   CloudFormationNotificationArn: { Type: String }
+  AlbFullName: { Type: String }
+  AlbHttpsListenerArn: { Type: String }
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
@@ -26,6 +28,10 @@ Parameters:
   DovetailRouterSecretsVersion: { Type: String }
   DovetailLegacyEcrImageTag: { Type: String }
   DovetailLegacySecretsVersion: { Type: String }
+
+  MetricsEcrImageTag: { Type: String }
+  MetricsSecretsVersion: { Type: String }
+  MetricsSharedAlbListenerRulePriorityPrefix: { Type: String }
 
 Resources:
   DovetailRouterStack:
@@ -66,6 +72,39 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Router } # TODO
       TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-router.yml
+      TimeoutInMinutes: 20
+
+  MetricsStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref MetricsEcrImageTag
+        SecretsVersion: !Ref MetricsSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref MetricsSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Metrics }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/metrics.yml
       TimeoutInMinutes: 20
 
 Outputs:
