Move Grove stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1048,10 +1048,6 @@ Resources:
   #       FeederEcrImageTag: !Ref FeederEcrImageTag
   #       FeederSecretsVersion: !Ref FeederSecretsVersion
 
-  #       GroveEcrImageTag: !Ref GroveEcrImageTag
-  #       GroveSecretsVersion: !Ref GroveSecretsVersion
-  #       GroveSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Grove, prefix]
-
   #       NetworksEcrImageTag: !Ref NetworksEcrImageTag
   #       NetworksSecretsVersion: !Ref NetworksSecretsVersion
   #       NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
@@ -1141,6 +1137,10 @@ Resources:
         DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
         DovetailLegacyEcrImageTag: !Ref DovetailEcrImageTag
         DovetailLegacySecretsVersion: !Ref DovetailSecretsVersion
+
+        GroveEcrImageTag: !Ref GroveEcrImageTag
+        GroveSecretsVersion: !Ref GroveSecretsVersion
+        GroveSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Grove, prefix]
 
         MetricsEcrImageTag: !Ref MetricsEcrImageTag
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
