--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -29,6 +29,10 @@ Parameters:
   DovetailLegacyEcrImageTag: { Type: String }
   DovetailLegacySecretsVersion: { Type: String }
 
+  GroveEcrImageTag: { Type: String }
+  GroveSecretsVersion: { Type: String }
+  GroveSharedAlbListenerRulePriorityPrefix: { Type: String }
+
   MetricsEcrImageTag: { Type: String }
   MetricsSecretsVersion: { Type: String }
   MetricsSharedAlbListenerRulePriorityPrefix: { Type: String }
@@ -72,6 +76,39 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Router } # TODO
       TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-router.yml
+      TimeoutInMinutes: 20
+
+  GroveStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref GroveEcrImageTag
+        SecretsVersion: !Ref GroveSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref GroveSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Grove }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/grove.yml
       TimeoutInMinutes: 20
 
   MetricsStack:
