Add missing parameters

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1115,6 +1115,8 @@ Resources:
       Parameters:
         TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/apps
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
+        AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
+        AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
         EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         SecretsBase: !GetAtt Constants.SecretsBaseRegion
